Fix missing ColorModeToggle on mobile view

--- a/src/theme/ColorModeToggle/styles.module.css
+++ b/src/theme/ColorModeToggle/styles.module.css
@@ -7,6 +7,6 @@
 
 @media (max-width: 996px) {
   .color_mode_toggle_styles {
-    display: none;
+    margin: 0 0;
   }
 }
